@@ -20,6 +20,8 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import com.facebook.buck.core.filesystems.AbsPath;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.io.watchman.WatchmanEvent.Kind;
 import com.facebook.buck.io.watchman.WatchmanOverflowEvent;
 import com.facebook.buck.io.watchman.WatchmanPathEvent;
@@ -99,7 +101,8 @@ public class FileTreeCacheTest {
     cache.put(ImmutableFileTreeKey.of(Paths.get("dir1")), ftree2);
     cache.put(ImmutableFileTreeKey.of(Paths.get("dir1/dir2")), ftree3);
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("dir1/file2"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("dir1/file2")));
     cache.getInvalidator().onFileSystemChange(event);
 
     // all trees up should be invalidated
@@ -127,7 +130,8 @@ public class FileTreeCacheTest {
                 ImmutableSortedSet.of()),
             ImmutableMap.of()));
 
-    WatchmanPathEvent event = WatchmanPathEvent.of(tmp.getRoot(), kind, Paths.get("file1"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), kind, RelPath.of(Paths.get("file1")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<FileTree> ftree = cache.get(ImmutableFileTreeKey.of(Paths.get("")));
     assertFalse(ftree.isPresent());
@@ -147,7 +151,8 @@ public class FileTreeCacheTest {
             ImmutableMap.of()));
 
     // should not invalidate
-    WatchmanPathEvent event = WatchmanPathEvent.of(tmp.getRoot(), Kind.MODIFY, Paths.get("file"));
+    WatchmanPathEvent event =
+        WatchmanPathEvent.of(AbsPath.of(tmp.getRoot()), Kind.MODIFY, RelPath.of(Paths.get("file")));
     cache.getInvalidator().onFileSystemChange(event);
     Optional<FileTree> ftree = cache.get(ImmutableFileTreeKey.of(Paths.get("")));
     assertTrue(ftree.isPresent());
@@ -167,7 +172,7 @@ public class FileTreeCacheTest {
             ImmutableMap.of()));
 
     // should not invalidate
-    WatchmanOverflowEvent event = WatchmanOverflowEvent.of(tmp.getRoot(), "Test");
+    WatchmanOverflowEvent event = WatchmanOverflowEvent.of(AbsPath.of(tmp.getRoot()), "Test");
     cache.getInvalidator().onFileSystemChange(event);
     Optional<FileTree> ftree = cache.get(ImmutableFileTreeKey.of(Paths.get("")));
     assertFalse(ftree.isPresent());
